[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Menu/PlayersMenu/PlayersMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://1.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Menu/NewGameMenu/NewGameMenu.tscn" type="PackedScene" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -86.0
margin_right = 94.0
margin_bottom = 296.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="VBoxContainer"]
margin_right = 187.0
margin_bottom = 47.0
text = "New Game"

[node name="Players" type="Button" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 187.0
margin_bottom = 144.0
text = "Players"

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="PlayersMenu" parent="UI" instance=ExtResource( 1 )]
visible = false

[node name="NewGameMenu" parent="UI" instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Players" to="." method="_on_Players_pressed"]
